fix(toast): removed important and aligned with figma (#1348)
* fix(toast): removed important and aligned with figma

* fix(toast): font update

* fix(toast): removed redundant styles

--- a/packages/core/src/components/toast/toast.scss
+++ b/packages/core/src/components/toast/toast.scss
@@ -2,27 +2,6 @@
 @import '../../mixins/z-index';
 @import '../../../../../typography/utilities/typography-utility';
 
-// Mixins
-@mixin toast-headline-07 {
-  /* !important is needed here to prevent this from being overwritten by our CSS-reset. */
-  font-family: var(--headline-07-font-family) !important;
-  letter-spacing: var(--headline-07-letter-spacing) !important;
-  font-size: var(--headline-07-font-size);
-  line-height: var(--headline-07-line-height);
-  font-weight: var(--headline-07-font-weight);
-  text-transform: var(--headline-07-text-transform);
-}
-
-@mixin toast-detail-02 {
-  /* !important is needed here to prevent this from being overwritten by our CSS-reset. */
-  font-family: var(--detail-02-font-family) !important;
-  letter-spacing: var(--detail-02-letter-spacing) !important;
-  font-size: var(--detail-02-font-size);
-  line-height: var(--detail-02-line-height);
-  font-weight: var(--detail-02-font-weight);
-  text-transform: var(--detail-02-text-transform);
-}
-
 :host(.hide) {
   display: none;
   visibility: hidden;
@@ -114,7 +93,7 @@
 
     .header,
     slot[name='header']::slotted(*) {
-      @include toast-headline-07;
+      @include headline-07;
 
       color: var(--toast-headline);
     }
@@ -122,7 +101,7 @@
     .subheader,
     slot[name='subheader']::slotted(*) {
       color: var(--toast-subheadline);
-      @include toast-detail-02;
+      @include detail-02;
 
       &.no-link {
         slot::slotted(*) {
